added previews section +

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
     </section>
     <section class="previews">
-
+        <div class="container"></div>
     </section>
 
 </body>
