--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Driving school</title>
+    <title>Wrooom</title>
     <link rel="stylesheet" href="/css/bootstrap-grid.css">
     <link rel="stylesheet" href="/css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
@@ -84,9 +84,14 @@
             </div>
         </div>
     </section>
-    <section class="previews">
-        <div class="container"></div>
+    <section class="reviews">
+        <div class="reviews-bg"></div>
+        <div class="container">
+            <h2>REVIEWS</h2>
+        </div>
     </section>
+<div class="footer"></div>
 
+    <script src="/js/main.js"></script>
 </body>
 </html>
