added previews changes

--- a/index.html
+++ b/index.html
@@ -1,97 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Wrooom</title>
-    <link rel="stylesheet" href="/css/bootstrap-grid.css">
-    <link rel="stylesheet" href="/css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+   <meta charset="UTF-8">
+   <title>Wrooom</title>
+   <link rel="stylesheet" href="/css/bootstrap-grid.css">
+   <link rel="stylesheet" href="/css/main.css">
+   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <div class="row">
-                <div class="col"><a href="#">logo</a></div>
-                <nav class="col-8">
-                    <ul>
-                        <li><a href="#">home</a></li><!--
-                        --><li><a href="#">about us</a></li><!--
-                        --><li><a href="#">courses</a></li><!--
-                        --><li><a href="#">instructors</a></li><!--
-                        --><li><a href="#">contacts</a></li>
-                    </ul>
-                </nav>
+   <header>
+      <div class="container">
+         <div class="row">
+            <div class="col"><a href="#">logo</a></div>
+            <nav class="col-8">
+               <ul>
+                  <li><a href="#">home</a></li><!--
+                  --><li><a href="#">about us</a></li><!--
+                  --><li><a href="#">courses</a></li><!--
+                  --><li><a href="#">instructors</a></li><!--
+                  --><li><a href="#">contacts</a></li>
+               </ul>
+            </nav>
+         </div>
+      </div>
+   </header>
+   <section class="home">
+      <div class="container">
+         <div class="row justify-content-end">
+            <div class="col-5">
+               <div class="home-tag">WELCOME TO DRIVING SCHOOL</div>
             </div>
-        </div>
-    </header>
-    <section class="home">
-        <div class="container">
-            <div class="row justify-content-end">
-                <div class="col-5">
-                    <div class="home-tag">WELCOME TO DRIVING SCHOOL</div>
-                </div>
+         </div>
+         <div class="row justify-content-end">
+            <div class="col-8">
+               <h1>LEARN TO <span>DRIVE</span> WITH US</h1>
             </div>
-            <div class="row justify-content-end">
-                <div class="col-8">
-                    <h1>LEARN TO <span>DRIVE</span> WITH US</h1>
-                </div>
+         </div>
+         <div class="row justify-content-end">
+            <div class="col-6">
+               <div class="home-description">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, minim veniamsed sed do eiusmod tempor maksu
+                     rez ut labore magna do eiusmod</p>
+               </div>
             </div>
-            <div class="row justify-content-end">
-                <div class="col-6">
-                    <div class="home-description">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, minim veniamsed sed do eiusmod tempor maksu rez ut labore magna do eiusmod</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row row-button justify-content-end">
-                <a class="home-button" href="#">
-                    read more
-                </a>
-            </div>
+         </div>
+         <div class="row row-button justify-content-end">
+            <a class="home-button" href="#">
+               read more
+            </a>
+         </div>
 
-        </div>
+      </div>
 
-    </section>
-    <section class="advantages">
-        <div class="container">
-            <h2>WHY CHOOSE US</h2>
-            <div class="row justify-content-center">
-                <div class="col-6 advantages-tagline">
-                    <p>Duis eget pharetra libero, a finibus tellus. Cras sit amet egestas lacus, nec mattis risus.</p>
-                </div>
+   </section>
+   <section class="advantages">
+      <div class="container">
+         <h2>WHY CHOOSE US</h2>
+         <div class="row justify-content-center">
+            <div class="col-6 advantages-tagline">
+               <p>Duis eget pharetra libero, a finibus tellus. Cras sit amet egestas lacus, nec mattis risus.</p>
             </div>
-            <div class="row advantages-block">
-                    <div class="advantages-block-item">
-                        <img src="/img/manager-icon.png" alt="">
-                        <h3>BEST INSTRUCTORS</h3>
-                        <p>Cras suscipit tristique lectus quis consequat. Praesent convallis non risus dignissim.</p>
-                    </div>
-                    <div class="advantages-block-item">
-                        <img src="/img/dashboard-icon.png" alt="">
-                        <h3>SAFETY DRIVING</h3>
-                        <p>Suspendisse ut blandit orci, eget suscipit felis vel augue. Praesent ut arcu urna.</p>
-                    </div>
-                    <div class="advantages-block-item">
-                        <img src="/img/timetable-icon.png" alt="">
-                        <h3>FLEXIBLE SCHEDULE</h3>
-                        <p>Quisque rutrum. Aene imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies.</p>
-                    </div>
-                    <div class="advantages-block-item">
-                        <img src="/img/like-icon.png" alt="">
-                        <h3>AFFORDABLE FEE</h3>
-                        <p>Quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus uneque viverra justo.</p>
-                    </div>
+         </div>
+         <div class="row advantages-block">
+            <div class="advantages-block-item">
+               <img src="/img/manager-icon.png" alt="">
+               <h3>BEST INSTRUCTORS</h3>
+               <p>Cras suscipit tristique lectus quis consequat. Praesent convallis non risus dignissim.</p>
             </div>
-        </div>
-    </section>
-    <section class="reviews">
-        <div class="reviews-bg"></div>
-        <div class="container">
-            <h2>REVIEWS</h2>
-        </div>
-    </section>
-<div class="footer"></div>
+            <div class="advantages-block-item">
+               <img src="/img/dashboard-icon.png" alt="">
+               <h3>SAFETY DRIVING</h3>
+               <p>Suspendisse ut blandit orci, eget suscipit felis vel augue. Praesent ut arcu urna.</p>
+            </div>
+            <div class="advantages-block-item">
+               <img src="/img/timetable-icon.png" alt="">
+               <h3>FLEXIBLE SCHEDULE</h3>
+               <p>Quisque rutrum. Aene imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies.</p>
+            </div>
+            <div class="advantages-block-item">
+               <img src="/img/like-icon.png" alt="">
+               <h3>AFFORDABLE FEE</h3>
+               <p>Quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus uneque viverra justo.</p>
+            </div>
+         </div>
+      </div>
+   </section>
+   <section class="reviews">
+      <div class="reviews-bg"></div>
+      <div class="container">
+         <h2>REVIEWS</h2>
+         <div class="row align-items-center wrap">
+            <div class="col arrow left-arrow">
+               <img src="img/arrow.png">
+            </div>
+            <div class="col-10 content">
+               <div class="review">
+                  <div class="text"></div>
+                  <div class="author"></div>
+               </div>
+            </div>
+            <div class="col arrow right-arrow">
+               <img src="img/arrow.png">
+            </div>
+         </div>
+      </div>
+   </section>
+   <div class="footer"></div>
 
-    <script src="/js/main.js"></script>
+   <script src="/js/main.js"></script>
 </body>
 </html>
