animated previews changes

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <div class="reviews-bg"></div>
       <div class="container">
          <h2>REVIEWS</h2>
-         <div class="row align-items-center wrap">
+         <div class="row align-items-top wrap">
             <div class="col arrow left-arrow">
                <img src="img/arrow.png">
             </div>
