courses section added

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
          </div>
          <div class="row justify-content-end">
             <div class="col-8">
-               <h1>LEARN TO <span>DRIVE</span> WITH US</h1>
+               <h1>learn to <span>drive</span> with us</h1>
             </div>
          </div>
          <div class="row justify-content-end">
@@ -49,46 +49,24 @@
                read more
             </a>
          </div>
-
       </div>
-
    </section>
    <section class="advantages">
       <div class="container">
-         <h2>WHY CHOOSE US</h2>
+         <h2>why choose us</h2>
          <div class="row justify-content-center">
             <div class="col-6 advantages-tagline">
                <p>Duis eget pharetra libero, a finibus tellus. Cras sit amet egestas lacus, nec mattis risus.</p>
             </div>
          </div>
          <div class="row advantages-block">
-            <div class="advantages-block-item">
-               <img src="/img/manager-icon.png" alt="">
-               <h3>BEST INSTRUCTORS</h3>
-               <p>Cras suscipit tristique lectus quis consequat. Praesent convallis non risus dignissim.</p>
-            </div>
-            <div class="advantages-block-item">
-               <img src="/img/dashboard-icon.png" alt="">
-               <h3>SAFETY DRIVING</h3>
-               <p>Suspendisse ut blandit orci, eget suscipit felis vel augue. Praesent ut arcu urna.</p>
-            </div>
-            <div class="advantages-block-item">
-               <img src="/img/timetable-icon.png" alt="">
-               <h3>FLEXIBLE SCHEDULE</h3>
-               <p>Quisque rutrum. Aene imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies.</p>
-            </div>
-            <div class="advantages-block-item">
-               <img src="/img/like-icon.png" alt="">
-               <h3>AFFORDABLE FEE</h3>
-               <p>Quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus uneque viverra justo.</p>
-            </div>
          </div>
       </div>
    </section>
    <section class="reviews">
       <div class="reviews-bg"></div>
       <div class="container">
-         <h2>REVIEWS</h2>
+         <h2>reviews</h2>
          <div class="row align-items-top wrap">
             <div class="col arrow left-arrow">
                <img src="img/arrow.png">
@@ -102,6 +80,14 @@
             <div class="col arrow right-arrow">
                <img src="img/arrow.png">
             </div>
+         </div>
+      </div>
+   </section>
+   <section class="courses">
+      <div class="container">
+         <h2>courses</h2>
+         <div class="button-show"></div>
+         <div class="row courses-block">
          </div>
       </div>
    </section>
