show-hide all in courses section added

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
    <section class="courses">
       <div class="container">
          <h2>courses</h2>
-         <div class="button-show"></div>
+         <div class="button button-show"></div>
          <div class="row courses-block">
          </div>
       </div>
