--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <nav class="col-8">
                <ul>
                   <li><a href="#">home</a></li><!--
-                  --><li><a href="#">about us</a></li><!--
-                  --><li><a href="#">courses</a></li><!--
+                  --><li><a href="#advantages">about us</a></li><!--
+                  --><li><a href="#courses">courses</a></li><!--
                   --><li><a href="#">instructors</a></li><!--
                   --><li><a href="#">contacts</a></li>
                </ul>
@@ -45,13 +45,13 @@
             </div>
          </div>
          <div class="row row-button justify-content-end">
-            <a class="home-button" href="#">
+            <a class="home-button read" href="#">
                read more
             </a>
          </div>
       </div>
    </section>
-   <section class="advantages">
+   <section id="advantages" class="advantages">
       <div class="container">
          <h2>why choose us</h2>
          <div class="row justify-content-center">
@@ -83,7 +83,7 @@
          </div>
       </div>
    </section>
-   <section class="courses">
+   <section id="courses" class="courses">
       <div class="container">
          <h2>courses</h2>
          <div class="button button-show"></div>
