added courses popup

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
          </div>
          <div class="row justify-content-end">
-            <div class="col-6">
+            <div class="col-7">
                <div class="home-description">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, minim veniamsed sed do eiusmod tempor maksu
                      rez ut labore magna do eiusmod</p>
@@ -45,9 +45,9 @@
             </div>
          </div>
          <div class="row row-button justify-content-end">
-            <a class="home-button read" href="#">
+            <div class="home-button read">
                read more
-            </a>
+            </div>
          </div>
       </div>
    </section>
