added crs_popup with inner content

--- a/index.html
+++ b/index.html
@@ -8,91 +8,96 @@
    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
 </head>
 <body>
-   <header>
-      <div class="container">
-         <div class="row">
-            <div class="col"><a href="#">logo</a></div>
-            <nav class="col-8">
-               <ul>
-                  <li><a href="#">home</a></li><!--
-                  --><li><a href="#advantages">about us</a></li><!--
-                  --><li><a href="#courses">courses</a></li><!--
-                  --><li><a href="#">instructors</a></li><!--
-                  --><li><a href="#">contacts</a></li>
-               </ul>
-            </nav>
-         </div>
-      </div>
-   </header>
-   <section class="home">
-      <div class="container">
-         <div class="row justify-content-end">
-            <div class="col-5">
-               <div class="home-tag">WELCOME TO DRIVING SCHOOL</div>
+   <div class="allCoursesBox hide"></div>
+   <div class="static">
+      <header>
+         <div class="container">
+            <div class="row">
+               <div class="col"><a href="#">logo</a></div>
+               <nav class="col-8">
+                  <ul>
+                     <li><a href="#">home</a></li><!--
+                     --><li><a href="#advantages">about us</a></li><!--
+                     --><li><a href="#courses">courses</a></li><!--
+                     --><li><a href="#">instructors</a></li><!--
+                     --><li><a href="#">contacts</a></li>
+                  </ul>
+               </nav>
             </div>
          </div>
-         <div class="row justify-content-end">
-            <div class="col-8">
-               <h1>learn to <span>drive</span> with us</h1>
+      </header>
+      <section class="home">
+         <div class="container">
+            <div class="row justify-content-end">
+               <div class="col-5">
+                  <div class="home-tag">WELCOME TO DRIVING SCHOOL</div>
+               </div>
             </div>
-         </div>
-         <div class="row justify-content-end">
-            <div class="col-7">
-               <div class="home-description">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, minim veniamsed sed do eiusmod tempor maksu
-                     rez ut labore magna do eiusmod</p>
+            <div class="row justify-content-end">
+               <div class="col-8">
+                  <h1>learn to <span>drive</span> with us</h1>
+               </div>
+            </div>
+            <div class="row justify-content-end">
+               <div class="col-7">
+                  <div class="home-description">
+                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, minim veniamsed sed do eiusmod tempor maksu
+                        rez ut labore magna do eiusmod</p>
+                  </div>
+               </div>
+            </div>
+            <div class="row row-button justify-content-end">
+               <div class="home-button read">
+                  read more
                </div>
             </div>
          </div>
-         <div class="row row-button justify-content-end">
-            <div class="home-button read">
-               read more
-            </div>
-         </div>
-      </div>
-   </section>
-   <section id="advantages" class="advantages">
-      <div class="container">
-         <h2>why choose us</h2>
-         <div class="row justify-content-center">
-            <div class="col-6 advantages-tagline">
-               <p>Duis eget pharetra libero, a finibus tellus. Cras sit amet egestas lacus, nec mattis risus.</p>
-            </div>
-         </div>
-         <div class="row advantages-block">
-         </div>
-      </div>
-   </section>
-   <section class="reviews">
-      <div class="reviews-bg"></div>
-      <div class="container">
-         <h2>reviews</h2>
-         <div class="row align-items-top wrap">
-            <div class="col arrow left-arrow">
-               <img src="img/arrow.png">
-            </div>
-            <div class="col-10 content">
-               <div class="review">
-                  <div class="text"></div>
-                  <div class="author"></div>
+      </section>
+      <section id="advantages" class="advantages">
+         <div class="container">
+            <h2>why choose us</h2>
+            <div class="row justify-content-center">
+               <div class="col-6 advantages-tagline">
+                  <p>Duis eget pharetra libero, a finibus tellus. Cras sit amet egestas lacus, nec mattis risus.</p>
                </div>
             </div>
-            <div class="col arrow right-arrow">
-               <img src="img/arrow.png">
+            <div class="row advantages-block">
             </div>
          </div>
-      </div>
-   </section>
-   <section id="courses" class="courses">
-      <div class="container">
-         <h2>courses</h2>
-         <div class="button button-show"></div>
-         <div class="row courses-block">
+      </section>
+      <section class="reviews">
+         <div class="reviews-bg"></div>
+         <div class="container">
+            <h2>reviews</h2>
+            <div class="row align-items-top wrap">
+               <div class="col arrow left-arrow">
+                  <img src="img/arrow.png">
+               </div>
+               <div class="col-10 content">
+                  <div class="review">
+                     <div class="text"></div>
+                     <div class="author"></div>
+                  </div>
+               </div>
+               <div class="col arrow right-arrow">
+                  <img src="img/arrow.png">
+               </div>
+            </div>
          </div>
-      </div>
-   </section>
-   <div class="footer"></div>
+      </section>
+      <section id="courses" class="courses">
+         <div class="container">
+            <h2>courses</h2>
+            <div class="button button-show"></div>
+            <div class="row courses-block">
+            </div>
+         </div>
+      </section>
+      <footer></footer>
+   </div>
 
    <script src="/js/main.js"></script>
 </body>
 </html>
+
+
