added slider in crs_popup

--- a/index.html
+++ b/index.html
@@ -8,7 +8,26 @@
    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
 </head>
 <body>
-   <div class="allCoursesBox hide"></div>
+   <div class="allCoursesBox hide">
+      <div class="container">
+         <div class="popup-closeButton">X</div>
+         <div class="row crsLabel">
+            <div class="crsImg prev"></div>
+            <div class="crsImg current"></div>
+            <div class="crsImg next"></div>
+         </div>
+         <div class="row crsDesc">
+            <div class="row crsDescContent">
+               <div class="col-4 ">
+                  <h2></h2>
+                  <div class="amount"></div>
+                  <div class="button-send">send request</div>
+               </div>
+               <div class="col fullDesc"></div>
+            </div>
+         </div>
+      </div>
+   </div>
    <div class="static">
       <header>
          <div class="container">
