--- a/index.html
+++ b/index.html
@@ -8,7 +8,23 @@
    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
 </head>
 <body>
-   <div class="allCoursesBox hide">
+   <header>
+      <div class="container">
+         <div class="row">
+            <div class="col"><a href="#">logo</a></div>
+            <nav class="col-8">
+               <ul>
+                  <li><a href="#">home</a></li><!--
+                        --><li><a href="#advantages">about us</a></li><!--
+                        --><li><a href="#courses">courses</a></li><!--
+                        --><li><a href="#">instructors</a></li><!--
+                        --><li><a href="#">contacts</a></li>
+               </ul>
+            </nav>
+         </div>
+      </div>
+   </header>
+   <div class="allCoursesBox">
       <div class="container">
          <div class="popup-closeButton">X</div>
          <div class="row crsLabel">
@@ -29,22 +45,6 @@
       </div>
    </div>
    <div class="static">
-      <header>
-         <div class="container">
-            <div class="row">
-               <div class="col"><a href="#">logo</a></div>
-               <nav class="col-8">
-                  <ul>
-                     <li><a href="#">home</a></li><!--
-                     --><li><a href="#advantages">about us</a></li><!--
-                     --><li><a href="#courses">courses</a></li><!--
-                     --><li><a href="#">instructors</a></li><!--
-                     --><li><a href="#">contacts</a></li>
-                  </ul>
-               </nav>
-            </div>
-         </div>
-      </header>
       <section class="home">
          <div class="container">
             <div class="row justify-content-end">
