added indicators section

--- a/index.html
+++ b/index.html
@@ -112,6 +112,28 @@
             </div>
          </div>
       </section>
+      <section class="indicators">
+         <div class="container">
+            <div class="row indcBox">
+               <div class="col indcItem">
+                  <h3>grauntes</h3>
+                  <div class="indcNum">1350+</div>
+               </div>
+               <div class="col indcItem">
+                  <h3>teachers</h3>
+                  <div class="indcNum">32</div>
+               </div>
+               <div class="col indcItem">
+                  <h3>smthg else</h3>
+                  <div class="indcNum">74</div>
+               </div>
+               <div class="col indcItem">
+                  <h3>years on market</h3>
+                  <div class="indcNum">13</div>
+               </div>
+            </div>
+         </div>
+      </section>
       <footer></footer>
    </div>
 
