--- a/index.html
+++ b/index.html
@@ -113,28 +113,12 @@
          </div>
       </section>
       <section class="indicators">
+         <div class="indicators-bg"></div>
          <div class="container">
-            <div class="row indcBox">
-               <div class="col indcItem">
-                  <h3>grauntes</h3>
-                  <div class="indcNum">1350+</div>
-               </div>
-               <div class="col indcItem">
-                  <h3>teachers</h3>
-                  <div class="indcNum">32</div>
-               </div>
-               <div class="col indcItem">
-                  <h3>smthg else</h3>
-                  <div class="indcNum">74</div>
-               </div>
-               <div class="col indcItem">
-                  <h3>years on market</h3>
-                  <div class="indcNum">13</div>
-               </div>
-            </div>
+            <div class="row indcBox"></div>
          </div>
       </section>
-      <footer></footer>
+      <footer>footer</footer>
    </div>
 
    <script src="/js/main.js"></script>
