added instructors section

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
          <div class="reviews-bg"></div>
          <div class="container">
             <h2>reviews</h2>
-            <div class="row align-items-top wrap">
+            <div class="row wrap">
                <div class="col arrow left-arrow">
                   <img src="img/arrow.png">
                </div>
@@ -118,6 +118,28 @@
             <div class="row indcBox"></div>
          </div>
       </section>
+      <section id="instructors" class="instructors">
+         <div class="container">
+            <h2>our instructors</h2>
+            <div class="row justify-content-center">
+               <div class="col-6 instructors-tagline">
+                  <p>Duis eget pharetra libero, a finibus tellus. Cras sit amet egestas lacus, nec mattis risus.</p>
+               </div>
+            </div>
+            <div class="row instructors-block">
+               <div class="col arrow left-arrow">
+                  <img src="img/arrow-dark-blue.png">
+               </div>
+               <div class="col-10">
+                  <div class="row instructors-block-items"></div>
+               </div>
+               <div class="col arrow right-arrow">
+                  <img src="img/arrow-dark-blue.png">
+               </div>
+            </div>
+         </div>
+      </section>
+
       <footer>footer</footer>
    </div>
 
