--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                   <li><a href="#">home</a></li><!--
                         --><li><a href="#advantages">about us</a></li><!--
                         --><li><a href="#courses">courses</a></li><!--
-                        --><li><a href="#">instructors</a></li><!--
+                        --><li><a href="#instructors">instructors</a></li><!--
                         --><li><a href="#">contacts</a></li>
                </ul>
             </nav>
