--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                <div class="col-4 ">
                   <h2></h2>
                   <div class="amount"></div>
-                  <div class="button-send">send request</div>
+                  <div class="button-send">go to order</div>
                </div>
                <div class="col fullDesc"></div>
             </div>
@@ -137,6 +137,41 @@
                   <img src="img/arrow-dark-blue.png">
                </div>
             </div>
+         </div>
+      </section>
+      <section id="feedback" class="feedback">
+         <div class="container">
+            <h2>feedback</h2>
+            <div class="row justify-content-center">
+               <div class="col-6 feedback-tagline">
+                  <p>The smartest people work every day to provide the best service and to make our clients happy</p>
+               </div>
+            </div>
+            <form action="">
+               <div class="row justify-content-center">
+                  <div class="col-3">
+                     <input type="text" placeholder="Your name">
+                  </div>
+                  <div class="col-3">
+                     <input type="text" placeholder="Your e-mail">
+                  </div>
+               </div>
+               <div class="row justify-content-center">
+                  <div class="col-3">
+                     <input type="text" placeholder="Your phone">
+                  </div>
+                  <div class="col-3 course-list-block">
+                     <div class="course-select">Course</div>
+                     <div class="course-select-arrow"></div>
+                     <ul class="course-list"></ul>
+                  </div>
+               </div>
+               <div class="row justify-content-center">
+                  <div class="col-6">
+                     <textarea name="message" id="" placeholder="Your message"></textarea>
+                  </div>
+               </div>
+            </form>
          </div>
       </section>
 
