--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         --><li><a href="#advantages">about us</a></li><!--
                         --><li><a href="#courses">courses</a></li><!--
                         --><li><a href="#instructors">instructors</a></li><!--
-                        --><li><a href="#">contacts</a></li>
+                        --><li><a href="#contacts">contacts</a></li>
                </ul>
             </nav>
          </div>
@@ -180,8 +180,60 @@
             </form>
          </div>
       </section>
-
-      <footer>footer</footer>
+      <footer id="contacts">
+         <div class="container">
+            <div class="row">
+               <div class="col-6 contacts-info">
+                  <h2>contacts</h2>
+                  <div class="contacts-info-item">
+                     <div class="contacts-info-icon">
+                        <img src="/img/region-icon.png" alt="">
+                     </div>
+                     <div class="contacts-info-text">
+                        Russia, St.Petersburg, Obuhov 120
+                     </div>
+                  </div>
+                  <div class="contacts-info-item">
+                     <div class="contacts-info-icon">
+                        <img src="/img/call-icon.png" alt="">
+                     </div>
+                     <div class="contacts-info-text">
+                        +7 986 666-44-34
+                     </div>
+                  </div>
+                  <div class="contacts-info-item">
+                     <div class="contacts-info-icon">
+                        <img src="/img/mail-icon.png" alt="">
+                     </div>
+                     <div class="contacts-info-text">
+                        hzmail@hz.com
+                     </div>
+                  </div>
+                  <div class="contacts-info-item contacts-info-item__last">
+                     <div class="contacts-info-icon">
+                        <img src="/img/clock-icon.png" alt="">
+                     </div>
+                     <div class="contacts-info-text">
+                        Mon-Fri 10:00 - 18:00
+                     </div>
+                  </div>
+                  <div class="soc-net"><a href="#" target="_blank"><img src="/img/fb-icon.png"></a></div><!--
+                  --><div class="soc-net"><a href="#" target="_blank"><img src="/img/ig-icon.png"></a></div><!--
+                  --><div class="soc-net"><a href="#" target="_blank"><img src="/img/tw-icon.png"></a></div>
+               </div>
+               <div class="col-6">
+                  <iframe
+                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2753.0533567907796!2d30.4806966902064!3d59.85336787188133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46962f6a5ed4c513%3A0xb537265229aa81b8!2z0JTQvtC8INCf0YDQuNC10LfQttC40YU!5e0!3m2!1sru!2sru!4v1550199230799"
+                     width="585"
+                     height="380"
+                     frameborder="0"
+                     style="border:0"
+                     allowfullscreen>
+                  </iframe>
+               </div>
+            </div>
+         </div>
+      </footer>
    </div>
 
    <script src="/js/main.js"></script>
